force-app/main/default/objects/Apttus_DealMgr__DealLineItem__c/Apttus_DealMgr__DealLineItem__c.object-meta.xml
<CustomObject>
    <description>Represents a product or service line item associated with a deal</description>
    <label>Deal Line Item</label>
    <nameField>
        <displayFormat>DI-{0000000000}</displayFormat>
        <label>Line Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>