force-app/main/default/objects/Apttus_DealMgr__DealLineItem__c/fields/Apttus_DealMgr__DealId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DealMgr__DealId__c</fullName>
    <description>ID of the associated deal</description>
    <inlineHelpText>ID of the associated deal</inlineHelpText>
    <label>Deal</label>
    <referenceTo>Apttus_DealMgr__Deal__c</referenceTo>
    <relationshipLabel>Deal Line Items</relationshipLabel>
    <relationshipName>Deal_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>