force-app/main/default/objects/Apttus_DealMgr__DealLineItem__c/fields/Apttus_DealMgr__DealSummaryGroupId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DealMgr__DealSummaryGroupId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the summary group associated with the item</description>
    <label>Deal Summary Group</label>
    <referenceTo>Apttus_DealMgr__DealSummaryGroup__c</referenceTo>
    <relationshipLabel>Deal Line Items</relationshipLabel>
    <relationshipName>DealLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>