force-app/main/default/objects/Apttus_DealMgr__DealLineItem__c/fields/Apttus_DealMgr__NetPrice__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DealMgr__NetPrice__c</fullName>
    <description>he net price for the product or service is the price after applying all manual adjustments</description>
    <label>Net Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>